<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/main_bg" >

    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_size"
        android:layout_alignParentTop="true"
        layout="@layout/title_themes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/google_store"
            android:textColor="@color/font_color" />

        <EditText
            android:id="@+id/storeUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/storeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_click"
            android:text="@string/save"
            android:textColor="@color/font_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/google_service"
            android:textColor="@color/font_color" />

        <EditText
            android:id="@+id/serviceUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/serviceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_click"
            android:onClick="saveUrl"
            android:text="@string/save"
            android:textColor="@color/font_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/default_map"
            android:textColor="@color/font_color" />

        <TextView
            android:id="@+id/defMapText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baiduMap"
            android:textColor="@color/font_color" />

        <Button
            android:id="@+id/changeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_click"
            android:text="@string/change"
            android:textColor="@color/font_color" />

        <CheckBox
            android:id="@+id/checkBox_googlegpsCorrection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/googleGpsCorrection" />

        <TextView
            android:id="@+id/checkVersionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_check"
            android:textColor="@color/font_color" />

        <Button
            android:id="@+id/checkVersionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_click"
            android:onClick="checkVersion"
            android:text="@string/check"
            android:textColor="@color/font_color" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_process"
            android:textColor="@color/font_color"
            android:visibility="invisible" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_click"
            android:text="@string/exit"
            android:textColor="@color/font_color"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>