<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/queryId"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/white" >

    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_size"
        android:layout_alignParentTop="true"
        layout="@layout/title_themes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_1"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/select_device" />

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_select_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_car"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/file_local" />

            <ImageView
                android:id="@+id/iv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_find_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_2"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_3"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/channel" />

            <ImageView
                android:id="@+id/iv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_3"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_4"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/video_type" />

            <ImageView
                android:id="@+id/iv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_4"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_5"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/select_date" />

            <ImageView
                android:id="@+id/iv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_5"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_6"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/start_time" />

            <ImageView
                android:id="@+id/iv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_6"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_7"
            style="@style/finding_item" >

            <TextView
                style="@style/finding_text"
                android:text="@string/end_time" />

            <ImageView
                android:id="@+id/iv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/alert" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@id/iv_7"
                android:text="123"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/find_line" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_find"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_logout"
            android:text="搜索"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>